syntax = "proto3";

package complaint;

import "rental"



enum ComplaintStatus {
  COMPLAINT_STATUS_UNSPECIFIED = 0;
  COMPLAINT_STATUS_PENDING = 1;
  COMPLAINT_STATUS_PROCESSING = 2;
  COMPLAINT_STATUS_RESOLVED = 3;
  COMPLAINT_STATUS_REJECTED = 4;
}

// Loại khiếu nại (complaint type)
enum ComplaintType {
  COMPLAINT_TYPE_UNSPECIFIED = 0;
  COMPLAINT_TYPE_DEVICE = 1;      // Khiếu nại về thiết bị
  COMPLAINT_TYPE_VEHICLE = 2;     // Khiếu nại về xe
  COMPLAINT_TYPE_COMBO = 3;       // Khiếu nại về combo
  COMPLAINT_TYPE_SERVICE = 4;     // Khiếu nại về dịch vụ
  COMPLAINT_TYPE_OTHER = 5;       // Khác
}

service ComplaintService {

  // User
  rpc CreateComplaint(CreateComplaintRequest) returns (ComplaintResponse);
  rpc GetComplaintById(GetComplaintByIdRequest) returns (ComplaintResponse);
  rpc GetComplaintsByUser(GetComplaintsByUserRequest) returns (ComplaintsResponse);
  rpc GetComplaintsByRental(GetComplaintsByRentalRequest) returns (ComplaintsResponse);

  // Admin
  rpc GetAllComplaints(GetAllComplaintsRequest) returns (ComplaintsResponse);
  rpc UpdateComplaintStatus(UpdateComplaintStatusRequest) returns (ComplaintResponse);
  rpc DeleteComplaint(DeleteComplaintRequest) returns (DeleteComplaintResponse);
}

// Complaint entity 
message Complaint {
  string id = 1;    
  string user_id = 2;     
  string rental_id = 3;  
  
  string device_id = 4;        // ID thiết bị (nếu có)
  string vehicle_id = 5;       // ID xe (nếu có) 
  string combo_id = 6;         // ID combo (nếu có)
  
  ComplaintType type = 7;     // Loại khiếu nại
  string title = 8;      // Tiêu đề khiếu nại
  string content = 9;    // Nội dung chi tiết
  repeated string evidence_images = 10;     // Danh sách URL ảnh minh chứng
  
  ComplaintStatus status = 11;    // Trạng thái xử lý
  string admin_response = 12;   // Phản hồi từ admin 

  string booking_id = 13;
  
  created_at = 14;   // Thời gian tạo
  updated_at = 15;   // Thời gian cập nhật cuối
  resolved_at = 16;  // Thời gian giải quyết (nếu có)
  
}

// ComplaintSummary - no content
message ComplaintSummary {
  string id = 1;                            
  string user_id = 2;         // ID người dùng gửi khiếu nại
  string rental_id = 3;       // ID đơn thuê liên quan
  
  string device_id = 4;       // ID thiết bị (nếu có)
  string vehicle_id = 5;      // ID xe (nếu có)
  string combo_id = 6;        // ID combo (nếu có)
  
  ComplaintType type = 7;     // Loại khiếu nại
  string title = 8;           // Tiêu đề khiếu nại
  
  ComplaintStatus status = 9;  // Trạng thái xử lý   

  string booking_id = 10;

  created_at = 11;        // Thời gian tạo
  updated_at = 12;        // Thời gian cập nhật cuối
  resolved_at = 13;       // Thời gian giải quyết 
}

// Request
message CreateComplaintRequest {
  string user_id = 1;         // ID người dùng
  string rental_id = 2;      // ID đơn thuê (bắt buộc)
  
  string device_id = 3;
  string vehicle_id = 4;
  string combo_id = 5;
  
  ComplaintType type = 6;     // Loại khiếu nại
  string title = 7;          // Tiêu đề (required)
  string content = 8;       // Nội dung (required)
  repeated string evidence_images = 9;    // Danh sách URL ảnh

  string booking_id = 10;
}

message GetComplaintByIdRequest {
  string id = 1;                             
}

message GetComplaintsByUserRequest {
  string user_id = 1;                           
  int32 page = 2;                               
  int32 page_size = 3;                         
}

message GetComplaintsByRentalRequest {
  string rental_id = 1;                       
  string booking_id = 2;     
}


message GetAllComplaintsRequest {
  ComplaintStatus status = 1;                       // Filter theo status (optional)
  ComplaintType type = 2;                           // Filter theo type (optional)
  int32 page = 3;                                   // Trang
  int32 page_size = 4;                              // Số lượng mỗi trang
}

message UpdateComplaintStatusRequest {
  string id = 1;                                    // UUID của complaint
  ComplaintStatus status = 2;                       // Trạng thái mới
  string admin_response = 3;                        // Phản hồi từ admin
  string admin_id = 4;                              // ID admin xử lý
}

message DeleteComplaintRequest {
  string id = 1;                                    // UUID của complaint
}


// RESPONSE MESSAGES
message ComplaintResponse {
  bool success = 1;                                 // Trạng thái thành công
  string message = 2;                               // Thông báo
  Complaint complaint = 3;                          // Dữ liệu complaint
}

message ComplaintsResponse {
  bool success = 1;                                 // Trạng thái thành công
  string message = 2;                               // Thông báo
  repeated ComplaintSummary complaints = 3;         // Danh sách complaints (dùng summary)
  int32 total_count = 4;                            // Tổng số bản ghi
  int32 page = 5;                                   // Trang hiện tại
  int32 page_size = 6;                              // Số lượng mỗi trang
}

message DeleteComplaintResponse {
  bool success = 1;                                 // Trạng thái thành công
  string message = 2;                               // Thông báo
}


